# gomoku

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  build-clean.sh  build-run.sh  run-build.sh  run-game.sh
.cache/clangd/index/: ClientNetworkManager.cpp.26271A3D092A02A1.idx  ClientNetworkManager.h.E1D3E26E2AC08FA3.idx  ConnectionPanel.cpp.5BBA4A81412DA709.idx  ConnectionPanel.h.C1FB989B44CCF0B4.idx  GameController.cpp.94B94221CFF51AAA.idx  GameController.h.B5C322C8C457F8DD.idx  GameWindow.cpp.A963CC7EA6EDC9F0.idx  GameWindow.h.77D5190A46F7B072.idx  Gomoku.cpp.7177461E9D0FC1B1.idx  Gomoku.h.E21DB5D83E9B3D2C.idx  GomokuException.h.17918B65C15771F8.idx  ImagePanel.cpp.A5278B7561946B5D.idx  ImagePanel.h.F4710A2CE5B4C926.idx  InputField.cpp.EA97E3557C7C82F1.idx  InputField.h.A11A8E07F28D8459.idx  MainGamePanel.cpp.8AE065A0D930140E.idx  MainGamePanel.h.A67D52B512DD3492.idx  ResponseListenerThread.cpp.838BB3D9708EE86D.idx  ResponseListenerThread.h.0E167E8BF661FCB9.idx  acceptor.h.53BC6CB2AE7EBABC.idx  allocators.h.5E51A40873FC2243.idx  biginteger.h.D1F9587C5A58E6D8.idx  client_request.cpp.4F56DC2DAF8588CF.idx  client_request.h.893EBC41E406D12D.idx  clzll.h.BB5B631369646539.idx  connector.h.C11E0227EBAE013E.idx  default.conf.14807D5905C45261.idx  diyfp.h.F3E60AAF09000DD8.idx  document.h.A58B4053784D7A11.idx  dtoa.h.E70BEA87669C62CE.idx  encodedstream.h.08CB79899F5C0529.idx  encodings.h.362D0780B5CA4551.idx  error.h.B13FF18DF33FDEA6.idx  exception.h.1BE6C6B069AA1BAE.idx  full_state_response.cpp.370B2EAF07EE9095.idx  full_state_response.h.85D6A6FA8647E654.idx  game_instance.cpp.D332D4D582996ED0.idx  game_instance.h.0151F23131452F2C.idx  game_instance_manager.cpp.6E839FED431AB705.idx  game_instance_manager.h.AC4F7AC6D73C021D.idx  (+121 more)
googletest/lib/googletest/src/: gtest-port.cc
src/client/: GameController.cpp  GameController.h  game_controller.cpp  game_controller.h  main.cpp
src/client/app/: Gomoku.cpp  Gomoku.h
src/client/network/: ClientNetworkManager.cpp  ClientNetworkManager.h  ResponseListenerThread.h  Untitled Diagram.drawio  client_network_manager.cpp  client_network_manager.h  response_listener_thread.cpp  response_listener_thread.h
src/client/panels/: ConnectionPanel.cpp  ConnectionPanel.h  MainGamePanel.cpp  MainGamePanel.h  connection_panel.cpp  connection_panel.h  main_game_panel.cpp  main_game_panel.h
src/client/uiElements/: ImagePanel.cpp  image_panel.cpp  image_panel.h  input_field.cpp  input_field.h
src/client/windows/: GameWindow.cpp  GameWindow.h  game-window.h  game_window.cpp  game_window.h
src/common/exceptions/: GomokuException.h  gomoku_exception.h
src/common/game_state/: game_state.cpp  game_state.h  opening_rules.cpp  opening_rules.h
src/common/game_state/cards/: card.cpp  card.h  discard_pile.cpp  discard_pile.h  draw_pile.cpp  draw_pile.h
src/common/game_state/player/: hand.cpp  hand.h  player.cpp  player.h
src/common/game_state/playing_board/: opening_rules.cpp  opening_rules.h  playing_board.cpp  playing_board.h  stone.cpp  stone.h
src/common/network/requests/: client_request.cpp  client_request.h  draw_card_request.cpp  draw_card_request.h  fold_request.h  forfeit_request.cpp  forfeit_request.h  join_game_request.cpp  join_game_request.h  place_stone_request.cpp  place_stone_request.h  play_card_request.cpp  play_card_request.h  play_stone_request.cpp  play_stone_request.h  restart_game_request.cpp  restart_game_request.h  select_game_mode_request.cpp  select_game_mode_request.h  start_game_request.cpp  start_game_request.h  swap_color_request.cpp  swap_color_request.h  swap_colour_request.cpp  swap_colour_request.h  swap_decision_request.cpp  swap_decision_request.h
src/common/network/responses/: full_state_response.cpp  full_state_response.h  request_response.cpp  request_response.h  server_response.cpp  server_response.h
src/common/serialization/: json_utils.h  serializable.h  serializable_value.h  unique_serializable.cpp  unique_serializable.h  value_type_helpers.h  vector_utils.h
src/server/: game_instance.cpp  game_instance.h  game_instance_manager.h  player_manager.cpp  player_manager.h  request_handler.cpp  request_handler.h  server_network_manager.cpp  server_network_manager.h
unit-tests/: CMakeLists.txt  card.cpp  game_state.cpp  opening_rules.cpp  player.cpp  playing_board.cpp
